--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,10 @@
 {
     "name": "ncut/auto",
     "description": "autoload classes",
-    "require": {}
+    "require": {},
+    "autoload": {
+        "psr-4": {
+            "Demo\\":"./src/Demo"
+        }
+    }
 }
