--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,10 @@
 {
     "name": "ncut/auto",
     "description": "autoload classes",
-    "require": {},
+    "require": {
+        "monolog/monolog": "^2.1",
+        "nesbot/carbon": "^2.41"
+    },
     "autoload": {
         "psr-4": {
             "Demo\\":"./src/Demo"
